k8s/kafka/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kafka
  namespace: banking
spec:
  type: ClusterIP
  selector:
    app: kafka
  ports:
    - name: plaintext
      port: 9092
      targetPort: 9092
---
apiVersion: v1
kind: Service
metadata:
  name: kafka-headless
  namespace: banking
spec:
  type: ClusterIP
  clusterIP: None
  selector:
    app: kafka
  ports:
    - name: plaintext
      port: 9092
      targetPort: 9092
    - name: controller
      port: 9093
      targetPort: 9093
